# effects

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/effects/: __init__.py  _typing.py  effects.py  util.py
tests/: __init__.py  run_tests.py  test_effects.py
tests/functional/: __init__.py  test_patterns.py  test_threading.py
tests/unit/: __init__.py  test_effects.py  test_generics.py  test_handlers.py  test_stack_manipulation.py  test_type_inference.py  test_union_handlers.py  test_util.py
